# snapcode

./: AGENTS.md  LICENSE  README.md  README.zh-CN.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: USER_GUIDE.md  USER_GUIDE.zh-CN.md
scripts/: bump-version.mjs  gen-icon.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  email_monitor.rs  hotkey.rs  i18n.rs  imap_client.rs  lib.rs  mail.rs  main.rs  notifications.rs  parser.rs  paste.rs  settings.rs  state.rs  storage.rs  toast.rs
src/components/: HistoryPage.tsx  Onboarding.tsx  SettingsPage.tsx  ShortcutRecorder.tsx  TitleBar.tsx  TopBar.tsx  UpdateDialog.tsx
src/components/ui/: button.tsx  input.tsx
src/lib/: tauri.ts  theme.ts  time.ts  utils.ts
src/lib/i18n/: en.ts  index.tsx  zh-CN.ts
