[package]
name = "snapcode"
version = "0.2.1"
edition = "2021"

[lib]
name = "snapcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
tauri-plugin-updater = "2"
# 直接声明 reqwest 仅为启用 system-proxy feature：tauri-plugin-updater 以
# default-features = false 引入 reqwest（不含默认的 system-proxy），其更新请求因此
# 永不走系统代理、始终直连。feature 统一后，插件的 reqwest 客户端即支持系统代理。
reqwest = { version = "0.13", default-features = false, features = ["system-proxy"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "UI_Notifications",
    "UI_Notifications_Management",
    "ApplicationModel",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_Storage_EnhancedStorage",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Wdk_System_SystemServices",
] }
