[package]
name = "snapcode"
version = "0.2.1"
edition = "2021"

[lib]
name = "snapcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
tauri-plugin-updater = "2"
# 直接声明 reqwest 仅为启用 system-proxy feature：tauri-plugin-updater 以
# default-features = false 引入 reqwest（不含默认的 system-proxy），其更新请求因此
# 永不走系统代理、始终直连。feature 统一后，插件的 reqwest 客户端即支持系统代理。
reqwest = { version = "0.13", default-features = false, features = ["system-proxy"] }
# POP3 over TLS：rustls 与 updater 引入的版本统一；显式使用 ring provider，
# 不依赖进程级默认 provider（updater 可能在 POP3 首次连接之后才安装它）。
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8"
mail-parser = "0.11"
# IMAP 客户端：同步阻塞式 imap crate，与现有 POP3 线程模型一致。
# 关闭默认 tls feature（native-tls）：TLS 统一走项目已有的 rustls 0.23 栈，
# 由 imap_client.rs 先自建 rustls 连接、再以 imap::Client::new() 包装。
imap = { version = "2.4", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "UI_Notifications",
    "UI_Notifications_Management",
    "ApplicationModel",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_Storage_EnhancedStorage",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Wdk_System_SystemServices",
] }
